# cse564

./: README.md  pyproject.toml
lab1/data/raw/: absenteeism_at_work_raw.xls
lab2a/: app.py  testing.ipynb
lab2a/assets/: style.css
lab2a/data/: pan22_features.csv
lab2b/: app.py  components.py  tabs.py  testing.ipynb
lab2b/assets/: style.css
project1/: README.md  app.py  columns_to_drop.txt  features.json  main.py  preprocess_data.ipynb  preprocess_data.py
project1/assets/: reason_mapping.json  style.css
project1/data/: bike_sharing_daily.xls
project1/data/preprocessed/: absenteeism_at_work_preprocessed.csv  absenteeism_at_work_preprocessed.xls  absenteeism_at_work_preprocessed_excel.xls
project1/data/processed/: data_scientist_salary_processed.csv
project1/data/raw/: absenteeism_at_work_raw.xls
project2/: app.py  testing.ipynb
project2/assets/: style.css
project2/data/: pan22_features.csv
