[tool.poetry]
name = "cse564"
version = "0.1.0"
description = "Repo for my CSE 564 projects"
authors = ["Eric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.3"
plotly = "5.13.0"
dash = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
