[tool.poetry]
name = "cse564"
version = "0.1.0"
description = "Repo for my CSE 564 projects"
authors = ["Eric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
pandas = "^1.5.3"
plotly = "5.13.0"
dash = "^2.8.1"
dash-bootstrap-components = "^1.3.1"
ipython = "^8.9.0"
nbformat = "^5.7.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
